tests/ui/immutable_type.rs
use pyo3::prelude::*;

#[pyclass(immutable_type)]
struct ImmutableType {}

fn main() {}
